WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
143231
WebBackForwardList doesn't need to manually clear the snapshot of an entry when removing it.
https://bugs.webkit.org/show_bug.cgi?id=143231
Summary
WebBackForwardList doesn't need to manually clear the snapshot of an entry wh...
Andreas Kling
Reported
2015-03-30 11:11:41 PDT
No need to setSnapshot(nullptr) when removing an item from the WebBackForwardList now that items actually get destroyed right after.
Attachments
Patch
(1.46 KB, patch)
2015-03-30 11:12 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2015-03-30 11:12:06 PDT
Created
attachment 249748
[details]
Patch
WebKit Commit Bot
Comment 2
2015-03-30 20:03:29 PDT
Comment on
attachment 249748
[details]
Patch Clearing flags on attachment: 249748 Committed
r182172
: <
http://trac.webkit.org/changeset/182172
>
WebKit Commit Bot
Comment 3
2015-03-30 20:03:33 PDT
All reviewed patches have been landed. Closing bug.
mitz
Comment 4
2015-03-30 20:09:36 PDT
Isn’t WebBackForwardListItem an API object? A client may hold on to arbitrarily many instances but will have no way to get to the snapshots. This suggests that dropping the reference to the snapshot once the item is not in the list could still be beneficial.
Andreas Kling
Comment 5
2015-03-30 20:21:07 PDT
(In reply to
comment #4
)
> Isn’t WebBackForwardListItem an API object? A client may hold on to > arbitrarily many instances but will have no way to get to the snapshots. > This suggests that dropping the reference to the snapshot once the item is > not in the list could still be beneficial.
Oh! I did not realize that WebBackForwardListItem was exposed through the modern WebKit API. Rolling this out.
WebKit Commit Bot
Comment 6
2015-03-30 20:24:21 PDT
Re-opened since this is blocked by
bug 143250
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug