WebBackForwardList doesn't need to manually clear the snapshot of an entry when removing it. <https://webkit.org/b/143231>

Reviewed by Tim Horton.

Now that we don't keep WebBackForwardListItem objects alive forever, it's not necessary
to clear the snapshot when removing them from the WebBackForwardList, since the entire
object will be deleted shortly after that anyway.

* UIProcess/WebBackForwardList.cpp:
(WebKit::WebBackForwardList::didRemoveItem):


Canonical link: https://commits.webkit.org/161272@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@182172 268f45cc-cd09-0410-ab3c-d52691b4dbfc